Streamline dagger ksp handling + remove napt