@@ -18,13 +18,7 @@
 package slack.gradle
 
 import com.android.build.api.artifact.SingleArtifact
-import com.android.build.api.variant.AndroidComponentsExtension
-import com.android.build.api.variant.ApplicationAndroidComponentsExtension
-import com.android.build.api.variant.HasAndroidTest
-import com.android.build.api.variant.HasAndroidTestBuilder
-import com.android.build.api.variant.HasUnitTestBuilder
-import com.android.build.api.variant.LibraryAndroidComponentsExtension
-import com.android.build.api.variant.LibraryVariant
+import com.android.build.api.variant.*
 import com.android.build.gradle.BaseExtension
 import com.android.build.gradle.LibraryExtension
 import com.android.build.gradle.TestExtension
@@ -32,8 +26,6 @@ import com.android.build.gradle.internal.dsl.BaseAppModuleExtension
 import com.android.build.gradle.tasks.JavaPreCompileTask
 import com.autonomousapps.DependencyAnalysisSubExtension
 import com.bugsnag.android.gradle.BugsnagPluginExtension
-import com.slapin.napt.JvmArgsStrongEncapsulation
-import com.slapin.napt.NaptGradleExtension
 import net.ltgt.gradle.errorprone.CheckSeverity
 import net.ltgt.gradle.errorprone.errorprone
 import net.ltgt.gradle.nullaway.nullaway
@@ -55,11 +47,10 @@ import org.gradle.jvm.toolchain.JavaLanguageVersion
 import org.gradle.jvm.toolchain.JavaToolchainService
 import org.gradle.language.base.plugins.LifecycleBasePlugin
 import slack.dependencyrake.RakeDependencies
-import slack.gradle.Configurations.isPlatformConfigurationName
+import slack.gradle.AptOptionsConfigs.invoke
 import slack.gradle.artifacts.Publisher
 import slack.gradle.artifacts.SgpArtifact
 import slack.gradle.dependencies.SlackDependencies
-import slack.gradle.kgp.KgpTasks
 import slack.gradle.lint.LintTasks
 import slack.gradle.permissionchecks.PermissionChecks
 import slack.gradle.tasks.AndroidTestApksTask
@@ -248,26 +239,6 @@ internal class StandardProjectConfigurations(
     configureAndroidProjects(slackExtension, slackProperties)
     configureJavaProject(slackProperties)
     slackExtension.applyTo(this)
-
-    pluginManager.withPlugin("com.sergei-lapin.napt") {
-      configure<NaptGradleExtension> {
-        // Don't generate triggers, we'll handle ensuring Java files ourselves.
-        generateNaptTrigger.setDisallowChanges(false)
-
-        // We need to add extra args due to dagger-android running GJF.
-        // Can remove once this is fixed or dagger-android's removed.
-        // https://github.com/google/dagger/pull/3532
-        forkJvmArgs.setDisallowChanges(
-          listOf(
-            "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-            "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-            "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-            "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-            "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-          ) + JvmArgsStrongEncapsulation
-        )
-      }
-    }
   }
 
   /**
